UI: Fix main container bg color blocking dark mode indigo

--- a/src/index.css
+++ b/src/index.css
@@ -262,12 +262,12 @@ body.light {
 }
 
 .dark {
-  background-color: #0A0A0A;
+  background-color: #03002b;
   color: #F5F5F5;
 }
 
 .light {
-  background-color: #F5F5DC;
+  background-color: #FCF9F2;
   color: #0A0A0A;
 }
 
